--- a/sandbox/sandbox.vcxproj.filters
+++ b/sandbox/sandbox.vcxproj.filters
@@ -18,12 +18,12 @@
     <ClCompile Include="src\sandbox.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\sandbox_2d.cpp">
+    <ClCompile Include="src\game_layer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\sandbox_2d.h">
+    <ClInclude Include="src\game_layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
