--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -157,40 +157,15 @@
     <ClInclude Include="src\engine\core\startup.h" />
     <ClInclude Include="src\engine\core\timestep.h" />
     <ClInclude Include="src\engine\core\window.h" />
-    <ClInclude Include="src\engine\debug\instrumentor.h" />
     <ClInclude Include="src\engine\events\app_event.h" />
     <ClInclude Include="src\engine\events\event.h" />
     <ClInclude Include="src\engine\events\key_event.h" />
     <ClInclude Include="src\engine\events\mouse_event.h" />
     <ClInclude Include="src\engine\imgui\imgui_layer.h" />
-    <ClInclude Include="src\engine\math\math.h" />
-    <ClInclude Include="src\engine\renderer\buffer.h" />
-    <ClInclude Include="src\engine\renderer\camera.h" />
-    <ClInclude Include="src\engine\renderer\editor_camera.h" />
-    <ClInclude Include="src\engine\renderer\framebuffer.h" />
-    <ClInclude Include="src\engine\renderer\graphics_context.h" />
-    <ClInclude Include="src\engine\renderer\orthographic_camera_controller.h" />
     <ClInclude Include="src\engine\renderer\render_command.h" />
+    <ClInclude Include="src\engine\renderer\render_command_queue.h" />
     <ClInclude Include="src\engine\renderer\renderer.h" />
-    <ClInclude Include="src\engine\renderer\renderer_2d.h" />
     <ClInclude Include="src\engine\renderer\renderer_api.h" />
-    <ClInclude Include="src\engine\renderer\shader.h" />
-    <ClInclude Include="src\engine\renderer\texture.h" />
-    <ClInclude Include="src\engine\renderer\vertex_array.h" />
-    <ClInclude Include="src\engine\scene\components.h" />
-    <ClInclude Include="src\engine\scene\entity.h" />
-    <ClInclude Include="src\engine\scene\scene.h" />
-    <ClInclude Include="src\engine\scene\scene_camera.h" />
-    <ClInclude Include="src\engine\scene\scene_serializer.h" />
-    <ClInclude Include="src\engine\scene\scriptable_entity.h" />
-    <ClInclude Include="src\engine\utils\platform_utils.h" />
-    <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
-    <ClInclude Include="src\platform\opengl\opengl_context.h" />
-    <ClInclude Include="src\platform\opengl\opengl_framebuffer.h" />
-    <ClInclude Include="src\platform\opengl\opengl_renderer_api.h" />
-    <ClInclude Include="src\platform\opengl\opengl_shader.h" />
-    <ClInclude Include="src\platform\opengl\opengl_texture.h" />
-    <ClInclude Include="src\platform\opengl\opengl_vertex_array.h" />
     <ClInclude Include="src\platform\windows\windows_window.h" />
     <ClInclude Include="src\supch.h" />
     <ClInclude Include="src\susumu.h" />
@@ -618,33 +593,11 @@
     <ClCompile Include="src\engine\core\window.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_build.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_layer.cpp" />
-    <ClCompile Include="src\engine\math\math.cpp" />
-    <ClCompile Include="src\engine\renderer\buffer.cpp" />
-    <ClCompile Include="src\engine\renderer\camera.cpp" />
-    <ClCompile Include="src\engine\renderer\editor_camera.cpp" />
-    <ClCompile Include="src\engine\renderer\framebuffer.cpp" />
-    <ClCompile Include="src\engine\renderer\graphics_context.cpp" />
-    <ClCompile Include="src\engine\renderer\orthographic_camera_controller.cpp" />
     <ClCompile Include="src\engine\renderer\render_command.cpp" />
+    <ClCompile Include="src\engine\renderer\render_command_queue.cpp" />
     <ClCompile Include="src\engine\renderer\renderer.cpp" />
-    <ClCompile Include="src\engine\renderer\renderer_2d.cpp" />
-    <ClCompile Include="src\engine\renderer\renderer_api.cpp" />
-    <ClCompile Include="src\engine\renderer\shader.cpp" />
-    <ClCompile Include="src\engine\renderer\texture.cpp" />
-    <ClCompile Include="src\engine\renderer\vertex_array.cpp" />
-    <ClCompile Include="src\engine\scene\entity.cpp" />
-    <ClCompile Include="src\engine\scene\scene.cpp" />
-    <ClCompile Include="src\engine\scene\scene_camera.cpp" />
-    <ClCompile Include="src\engine\scene\scene_serializer.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_context.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_framebuffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_renderer_api.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_shader.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_texture.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_vertex_array.cpp" />
     <ClCompile Include="src\platform\windows\windows_input.cpp" />
-    <ClCompile Include="src\platform\windows\windows_platform_utils.cpp" />
     <ClCompile Include="src\platform\windows\windows_window.cpp" />
     <ClCompile Include="src\supch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
