--- a/susumu/susumu.vcxproj.filters
+++ b/susumu/susumu.vcxproj.filters
@@ -1377,6 +1377,12 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
+    <ClInclude Include="src\platform\opengl\opengl_index_buffer.h" />
+    <ClInclude Include="src\engine\renderer\index_buffer.h" />
+    <ClInclude Include="src\engine\renderer\vertex_buffer.h" />
+    <ClInclude Include="src\platform\opengl\opengl_vertex_buffer.h" />
+    <ClInclude Include="src\engine\renderer\texture.h" />
+    <ClInclude Include="src\platform\opengl\opengl_texture.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\engine\core\app.cpp">
@@ -1427,5 +1433,11 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
+    <ClCompile Include="src\engine\renderer\index_buffer.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_index_buffer.cpp" />
+    <ClCompile Include="src\engine\renderer\vertex_buffer.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_vertex_buffer.cpp" />
+    <ClCompile Include="src\engine\renderer\texture.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_texture.cpp" />
   </ItemGroup>
 </Project>
