--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -4,7 +4,8 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1226,24
+ViewportPos=1312,133
+ViewportId=0x3DD03744
 Size=339,398
 Collapsed=0
 DockId=0x00000004,0
@@ -79,8 +80,9 @@ Size=960,540
 Collapsed=0
 
 [Window][GameLayer]
-Pos=1226,424
-Size=339,391
+ViewportPos=1312,133
+ViewportId=0x3DD03744
+Size=339,791
 Collapsed=0
 DockId=0x00000009,0
 
