--- a/susumu/susumu.vcxproj
+++ b/susumu/susumu.vcxproj
@@ -162,18 +162,16 @@
     <ClInclude Include="src\engine\events\key_event.h" />
     <ClInclude Include="src\engine\events\mouse_event.h" />
     <ClInclude Include="src\engine\imgui\imgui_layer.h" />
-    <ClInclude Include="src\engine\renderer\index_buffer.h" />
     <ClInclude Include="src\engine\renderer\render_command.h" />
     <ClInclude Include="src\engine\renderer\render_command_queue.h" />
     <ClInclude Include="src\engine\renderer\renderer.h" />
     <ClInclude Include="src\engine\renderer\renderer_api.h" />
     <ClInclude Include="src\engine\renderer\shader.h" />
     <ClInclude Include="src\engine\renderer\texture.h" />
-    <ClInclude Include="src\engine\renderer\vertex_buffer.h" />
-    <ClInclude Include="src\platform\opengl\opengl_index_buffer.h" />
+    <ClInclude Include="src\engine\renderer\buffer.h" />
     <ClInclude Include="src\platform\opengl\opengl_shader.h" />
     <ClInclude Include="src\platform\opengl\opengl_texture.h" />
-    <ClInclude Include="src\platform\opengl\opengl_vertex_buffer.h" />
+    <ClInclude Include="src\platform\opengl\opengl_buffer.h" />
     <ClInclude Include="src\platform\windows\windows_window.h" />
     <ClInclude Include="src\supch.h" />
     <ClInclude Include="src\susumu.h" />
@@ -601,18 +599,16 @@
     <ClCompile Include="src\engine\core\window.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_build.cpp" />
     <ClCompile Include="src\engine\imgui\imgui_layer.cpp" />
-    <ClCompile Include="src\engine\renderer\index_buffer.cpp" />
     <ClCompile Include="src\engine\renderer\render_command.cpp" />
     <ClCompile Include="src\engine\renderer\render_command_queue.cpp" />
     <ClCompile Include="src\engine\renderer\renderer.cpp" />
     <ClCompile Include="src\engine\renderer\shader.cpp" />
     <ClCompile Include="src\engine\renderer\texture.cpp" />
-    <ClCompile Include="src\engine\renderer\vertex_buffer.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_index_buffer.cpp" />
+    <ClCompile Include="src\engine\renderer\buffer.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_renderer_api.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_shader.cpp" />
     <ClCompile Include="src\platform\opengl\opengl_texture.cpp" />
-    <ClCompile Include="src\platform\opengl\opengl_vertex_buffer.cpp" />
+    <ClCompile Include="src\platform\opengl\opengl_buffer.cpp" />
     <ClCompile Include="src\platform\windows\windows_input.cpp" />
     <ClCompile Include="src\platform\windows\windows_window.cpp" />
     <ClCompile Include="src\supch.cpp">
