--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -33,7 +33,7 @@ DockId=0x00000003,1
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1600,900
+Size=1920,1027
 Collapsed=0
 
 [Window][Example: Console]
@@ -87,27 +87,33 @@ Collapsed=0
 DockId=0x00000009,0
 
 [Window][Renderer]
-Pos=828,66
+Pos=1062,66
 Size=298,126
 Collapsed=0
 
 [Window][Viewport]
 Pos=0,24
-Size=1142,876
+Size=1371,1003
 Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Environment]
-Pos=1144,24
-Size=456,876
+Pos=1373,24
+Size=547,1003
 Collapsed=0
 DockId=0x0000000D,1
 
 [Window][Model]
-Pos=1144,24
-Size=456,876
+Pos=1373,24
+Size=547,1003
 Collapsed=0
 DockId=0x0000000D,0
+
+[Window][Mesh Debug]
+Pos=1373,24
+Size=547,1003
+Collapsed=0
+DockId=0x0000000D,2
 
 [Docking][Data]
 DockNode        ID=0x00000002 Pos=1312,133 Size=339,791 Split=Y
@@ -120,9 +126,9 @@ DockSpace       ID=0x3BC79352 Pos=112,154 Size=960,521 Split=X
       DockNode  ID=0x00000003 Parent=0x00000007 SizeRef=1109,368 Selected=0x46B5E99C
     DockNode    ID=0x00000008 Parent=0x00000005 SizeRef=377,792 Selected=0x593C5C9B
   DockNode      ID=0x00000006 Parent=0x3BC79352 SizeRef=493,1008 Selected=0x1FD64BEB
-DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=34,81 Size=1600,876 Split=X
+DockSpace       ID=0xFA06BC56 Window=0x4647B76E Pos=0,47 Size=1920,1003 Split=X
   DockNode      ID=0x0000000C Parent=0xFA06BC56 SizeRef=1142,876 Split=X
     DockNode    ID=0x0000000A Parent=0x0000000C SizeRef=1138,876 CentralNode=1 Selected=0x995B0CF8
     DockNode    ID=0x0000000B Parent=0x0000000C SizeRef=460,876 Selected=0x1C33C293
-  DockNode      ID=0x0000000D Parent=0xFA06BC56 SizeRef=456,876 Selected=0xC0BA51F5
+  DockNode      ID=0x0000000D Parent=0xFA06BC56 SizeRef=456,876 Selected=0x16545DDD
 
